--- a/index.html
+++ b/index.html
@@ -7,5 +7,29 @@
 </head>
 <body>
     <h2>Welcome to My Website</h2>
+    <nav>
+        <a href="About.html">About</a>
+        <a href="Eduction.html">Education</a>
+        <a href="Technical.html">Technical Skills</a>
+        <a href="Project.html">Project</a>
+        <a href="Contact.html">Contact</a>
+        <a href="Certifiates.html">Certifiates</a>
+        <a href="High.html">Highights</a> 
+    </nav>
+  <div>
+        <label>Info Page</label>
+        <h2>Full name: Srujan A B</h2>
+        <p>Ph no: 7975478551</p>
+        <p>Ebackground: Bachelor of Engineering in Computer Science</p>
+    </div>
+    <footer>
+<a href="https://github.com/srujan2023">
+         <img width="250px" src="github.png" alt="">
+
+</a>       
+ <a href="https://www.linkedin.com/signup/cold-join?source=hb_signin">
+    <img width="250px" src="image.png" alt="">
+ </a>
+    </footer>
 </body>
 </html>
