--- a/Contact.html
+++ b/Contact.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        img{
+            border-radius: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>This is a Contact page</h1>
+ <center>
+       <h1>Contact</h1>
+    <img width="300px " src="srujan.jpg.jpeg" alt=""> <br>
+    <label for="">Phone:7975478551</label>
+ </center>
 </body>
 </html>
