--- a/Eduction.html
+++ b/Eduction.html
@@ -7,6 +7,23 @@
 </head>
 <body>
     <h1>Education Page</h1>
+    <section class="courses">
+    <h3>Featured Courses</h3>
+    <div class="course-list">
+      <div class="course-card">
+        <h4>Web Development</h4>
+        <p>Learn HTML, CSS, and JavaScript from scratch.</p>
+      </div>
+      <div class="course-card">
+        <h4>Data Science</h4>
+        <p>Master Python, statistics, and machine learning.</p>
+      </div>
+      <div class="course-card">
+        <h4>Digital Marketing</h4>
+        <p>Boost your brand with SEO, SEM, and social media.</p>
+      </div>
+    </div>
+  </section>
 
 </body>
 </html>
