--- a/Project.html
+++ b/Project.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
+</head>facere 
 <body>
-    <h1>This is a Project page </h1>
+    <h1>Project Link:</h1>
+    <a href="https://github.com/srujan2023/Project_for_Sir">https://github.com/srujan2023/Project_for_Sir</a>
+<br>
+<br>
+<h1>Technical Skill:</h1>
+<ol>
+    <li>HTML</li>
+    <li>CSS</li>
+</ol>
+<h1>Introduction:</h1>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea aspernatur qui, mollitia iusto repellendus corrupti enim quos alias fugit accusantium pariatur incidunt repudiandae veniam sed totam tempora quisquam consequuntur.</p>
 </body>
 </html>
