--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+     
+    </style>
 </head>
 <body>
     <h2>Welcome to My Website</h2>
-    <nav>
+    <nav class="nav">
         <a href="About.html">About</a>
         <a href="Eduction.html">Education</a>
         <a href="Technical.html">Technical Skills</a>
@@ -16,19 +19,19 @@
         <a href="Certifiates.html">Certifiates</a>
         <a href="High.html">Highights</a> 
     </nav>
-  <div>
+  <div class="info">
         <label>Info Page</label>
         <h2>Full name: Srujan A B</h2>
         <p>Ph no: 7975478551</p>
         <p>Ebackground: Bachelor of Engineering in Computer Science</p>
     </div>
-    <footer>
+    <footer class="footer">
 <a href="https://github.com/srujan2023">
          <img width="250px" src="github.png" alt="">
 
 </a>       
  <a href="https://www.linkedin.com/signup/cold-join?source=hb_signin">
-    <img width="250px" src="image.png" alt="">
+    <img width="250px" src="li.png" alt="">
  </a>
     </footer>
 </body>
