--- a/About.html
+++ b/About.html
@@ -1,11 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>This is a About Page</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About & Education | My Portfolio</title>
+  </head>
+  <body
+    style="
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      color: #333;
+    "
+  >
+    <!-- ===== HEADER / NAV BAR ===== -->
+    <header style="background-color: #0077cc; padding: 20px 0; color: white">
+      <div
+        style="
+          width: 90%;
+          margin: auto;
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+        "
+      >
+        <h1 style="margin: 0">My Portfolio</h1>
+        <nav>
+          <ul
+            style="
+              list-style: none;
+              display: flex;
+              gap: 20px;
+              margin: 0;
+              padding: 0;
+            "
+          >
+           
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <!-- ===== ABOUT & EDUCATION SECTION ===== -->
+    <section
+      style="
+        padding: 40px 0;
+        width: 90%;
+        margin: 20px auto;
+        background: white;
+        border-radius: 10px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      "
+    >
+      <div style="width: 90%; margin: auto">
+        <h2 style="color: #0077cc; text-align: center">About Me & Education</h2>
+        <p><strong>Full Name:</strong> Srujan A B</p>
+        <p><strong>College:</strong> City Engineering College</p>
+        <p><strong>Degree:</strong> B.E CSE</p>
+        <p><strong>Phone Number:</strong> +91 7975478851</p>
+        <p><strong>Email:</strong> srujaab@004@gmail.com</p>
+      </div>
+    </section>
+
+    <footer
+      style="
+        text-align: center;
+        padding: 20px;
+        background-color: #0077cc;
+        color: white;
+        margin-top: 20px;
+      "
+    >
+      <p>© 2025 Srujan AB | All Rights Reserved</p>
+    </footer>
+  </body>
 </html>
