--- a/Certifiates.html
+++ b/Certifiates.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Certifications | Srujan AB</title>
 </head>
-<body>
-   <h1>Certifiates</h1>
+<body style="margin:0; font-family: Arial, sans-serif; background-color:#f5f5f5; color:#333;">
+
+  <!-- ===== HEADER / NAV BAR ===== -->
+  <header style="background-color:#0077cc; padding:20px 0; color:white;">
+    <div style="width:90%; margin:auto; display:flex; justify-content:space-between; align-items:center;">
+      <h1 style="margin:0;">Srujan AB Portfolio</h1>
+      
+    </div>
+  </header>
+
+  <!-- ===== CERTIFICATIONS SECTION ===== -->
+  <section style="padding:40px 0; width:90%; margin:20px auto;">
+    <h2 style="color:#0077cc; text-align:center;">My Certifications</h2>
+
+    <!-- === Certification 1 === -->
+    <div style="background:white; padding:20px; margin:20px 0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1);">
+      <img src="assets/images/cert1.jpg" alt="Certificate 1" style="width:300px; border-radius:8px;">
+      <h3>Full Stack Web Development</h3>
+      <p><strong>Issued by:</strong> [Institute / Platform Name]</p>
+      <p><strong>Skills Learned:</strong> HTML, CSS, JavaScript, Node.js, React, Database Handling</p>
+      <p>This certification program helped me master frontend and backend fundamentals. I built a fully functional CRUD web app, improving my understanding of server-client architecture and REST APIs.</p>
+    </div>
+
+    <!-- === Certification 2 === -->
+    <div style="background:white; padding:20px; margin:20px 0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1);">
+      <img src="assets/images/cert2.jpg" alt="Certificate 2" style="width:300px; border-radius:8px;">
+      <h3>Java Programming</h3>
+      <p><strong>Issued by:</strong> [Institute / Platform Name]</p>
+      <p><strong>Skills Learned:</strong> Core Java, OOPs, JDBC, Spring Boot</p>
+      <p>This certification enhanced my backend skills. I created applications like a Student Record Manager and Mini Banking System using Java and MySQL for hands-on learning.</p>
+    </div>
+
+    <!-- === Certification 3 === -->
+    <div style="background:white; padding:20px; margin:20px 0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1);">
+      <img src="assets/images/cert3.jpg" alt="Certificate 3" style="width:300px; border-radius:8px;">
+      <h3>Data Structures and Algorithms (DSA)</h3>
+      <p><strong>Issued by:</strong> [Institute / Platform Name]</p>
+      <p><strong>Skills Learned:</strong> Arrays, Linked Lists, Stacks, Queues, Trees, Sorting & Searching</p>
+      <p>This course improved my problem-solving skills and algorithmic thinking, useful for coding platforms like LeetCode and HackerRank.</p>
+    </div>
+  </section>
+
+  <footer style="text-align:center; padding:20px; background-color:#0077cc; color:white; margin-top:20px;">
+    <p>© 2025 Dinesh C | All Rights Reserved</p>
+  </footer>
+
 </body>
 </html>
