--- a/index.html
+++ b/index.html
@@ -5,11 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-     
+     .header{
+        background-color: aqua;
+        height: 60px;
+        text-align: center;
+        padding-top: 25px;
+     }
+     .nav{
+        background-color: aquamarine;
+        padding: 30px;
+        display: block;
+        margin: 0px;
+        height: 10px;
+     }
+     .info{
+        background-color: blanchedalmond;
+        text-align: center;
+     }
+     .img{
+        border-radius: 120px;
+     }
     </style>
 </head>
 <body>
-    <h2>Welcome to My Website</h2>
+    <center>
+    <h2 class="header">My Portfolio Website</h2>
+</center>
     <nav class="nav">
         <a href="About.html">About</a>
         <a href="Eduction.html">Education</a>
@@ -19,20 +40,26 @@
         <a href="Certifiates.html">Certifiates</a>
         <a href="High.html">Highights</a> 
     </nav>
+  
   <div class="info">
-        <label>Info Page</label>
+        <h2>My Information:</h2>
         <h2>Full name: Srujan A B</h2>
         <p>Ph no: 7975478551</p>
         <p>Ebackground: Bachelor of Engineering in Computer Science</p>
+
+        <br>
     </div>
-    <footer class="footer">
+    <center>
+        <br>
+        <footer class="footer">
 <a href="https://github.com/srujan2023">
          <img width="250px" src="github.png" alt="">
 
 </a>       
  <a href="https://www.linkedin.com/signup/cold-join?source=hb_signin">
-    <img width="250px" src="li.png" alt="">
+    <img  class="img"  width="250px " src="li.png" alt="">
  </a>
     </footer>
+    </center>
 </body>
 </html>
