--- a/About.html
+++ b/About.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About & Education | My Portfolio</title>
+    <style>
+      body{
+        background-color: aqua;
+      }
+    </style>
   </head>
   <body
     style="
@@ -14,7 +19,7 @@
     "
   >
     <!-- ===== HEADER / NAV BAR ===== -->
-    <header style="background-color: #0077cc; padding: 20px 0; color: white">
+    <header style="background-color: green; padding: 20px 0; color: white">
       <div
         style="
           width: 90%;
@@ -67,11 +72,10 @@
       style="
         text-align: center;
         padding: 20px;
-        background-color: #0077cc;
-        color: white;
-        margin-top: 20px;
-      "
-    >
+        background-color:aqwa;
+        color:white;
+        margin-top:20px,
+        ">
       <p>© 2025 Srujan AB | All Rights Reserved</p>
     </footer>
   </body>
