--- a/Contact.html
+++ b/Contact.html
@@ -5,16 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        img{
-            border-radius: 20px;
-        }
-    </style>
+
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #baf4af;
+    margin: 0;
+    padding: 0;
+  }
+
+  .contact-container {
+    text-align: center;
+    padding: 40px 20px;
+    background-color: #fff;
+    max-width: 600px;
+    margin: 50px auto;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    border-radius: 10px;
+  }
+
+  h1 {
+    color: #2c3e50;
+    margin-bottom: 20px;
+  }
+
+  img {
+    width: 300px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    margin-bottom: 20px;
+  }
+
+  .phone-label {
+    font-size: 1.2em;
+    color: #555;
+  }
+
+  @media (max-width: 600px) {
+    img {
+      width: 90%;
+    }
+
+    .phone-label {
+      font-size: 1em;
+    }
+  }
+</style>
 </head>
 <body>
  <center>
        <h1>Contact</h1>
     <img width="300px " src="srujan.jpg.jpeg" alt=""> <br>
-    <label for="">Phone:7975478551</label>
+    <label for=""><b>Phone:</b>7975478551</label> <br>
+    <label for=""><b>Email:</b>Srujanab@004@gmail.com</label>
  </center>
 </body>
 </html>
