--- a/Project.html
+++ b/Project.html
@@ -4,7 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>facere 
+    <style>
+  /* Global Styles */
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #afe8f8;
+    margin: 0;
+    padding: 20px;
+    color: #333;
+  }
+
+  h1 {
+    color: #2c3e50;
+    font-size: 2em;
+    margin-top: 30px;
+    border-bottom: 2px solid #ddd;
+    padding-bottom: 10px;
+  }
+
+  a {
+    display: inline-block;
+    font-size: 1.1em;
+    color: #2980b9;
+    text-decoration: none;
+    margin: 10px 0;
+    word-break: break-word;
+  }
+
+  a:hover {
+    text-decoration: underline;
+    color: #1abc9c;
+  }
+
+  ol {
+    padding-left: 20px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+  }
+
+  li {
+    font-size: 1em;
+    margin: 8px 0;
+    color: #555;
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.6;
+    max-width: 800px;
+    margin: 0 auto 30px;
+    color: #444;
+    text-align: justify;
+  }
+
+  /* Responsive Design */
+  @media (max-width: 600px) {
+    body {
+      padding: 15px;
+    }
+
+    h1 {
+      font-size: 1.5em;
+    }
+
+    a {
+      font-size: 1em;
+    }
+
+    p {
+      font-size: 0.95em;
+    }
+  }
+</style>
+
+</head>
 <body>
     <h1>Project Link:</h1>
     <a href="https://github.com/srujan2023/Project_for_Sir">https://github.com/srujan2023/Project_for_Sir</a>
