--- a/Technical.html
+++ b/Technical.html
@@ -4,6 +4,97 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+      <styl>
+  /* Global Styles */
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 0;
+    color: #333;
+  }
+
+  h1 {
+    background-color: #2c3e50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    margin: 0;
+  }
+
+  main {
+    max-width: 900px;
+    margin: 30px auto;
+    padding: 20px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  }
+
+  section {
+    margin-bottom: 30px;
+  }
+
+  h2 {
+    color: #2980b9;
+    margin-bottom: 10px;
+    border-bottom: 2px solid #eee;
+    padding-bottom: 5px;
+  }
+
+  p {
+    font-size: 1rem;
+    line-height: 1.6;
+    color: #555;
+  }
+
+  ul {
+    list-style-type: none;
+    padding-left: 0;
+  }
+
+  li {
+    background-color: #ecf0f1;
+    margin: 8px 0;
+    padding: 10px;
+    border-radius: 5px;
+  }
+
+  code {
+    background-color: #f4f4f4;
+    padding: 5px 10px;
+    border-radius: 5px;
+    display: inline-block;
+    font-family: 'Courier New', Courier, monospace;
+    color: #c0392b;
+  }
+
+  pre {
+    background-color: #f0f0f0;
+    padding: 15px;
+    border-radius: 8px;
+    overflow-x: auto;
+  }
+
+  @media (max-width: 600px) {
+    main {
+      padding: 15px;
+    }
+
+    h1 {
+      font-size: 1.5em;
+    }
+
+    h2 {
+      font-size: 1.2em;
+    }
+
+    p, li {
+      font-size: 0.95em;
+    }
+  }
+</style>
 </head>
 <body>
   <h1>This is a Technical Page:</h1>
