--- a/High.html
+++ b/High.html
@@ -5,10 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        img{
-            width: 450px;
-            border-radius: 20px;
-        }
+        body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #99e2f6;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+
+h1, h2 {
+  color: #333;
+  margin-bottom: 10px;
+}
+
+img {
+  width: 100%;
+  max-width: 450px;
+  border-radius: 20px;
+  margin: 10px 0;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+.video {
+  margin: 20px 0;
+}
+
+.video iframe,
+.video video {
+  width: 100%;
+  max-width: 560px;
+  height: 315px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+}
+
+p {
+  text-align: justify;
+  margin: 0 auto 20px;
+  padding: 0 10px;
+  max-width: 800px;
+  line-height: 1.6;
+  color: #555;
+}
+
+@media (max-width: 600px) {
+  h1, h2 {
+    font-size: 1.2em;
+  }
+
+  img {
+    max-width: 100%;
+  }
+
+  .video iframe,
+  .video video {
+    height: auto;
+  }
+
+  p {
+    padding: 0 15px;
+  }
+}
+
         
        
     </style>
