Marquee Tag with song Updated

--- a/Certifiates.html
+++ b/Certifiates.html
@@ -21,7 +21,7 @@
 
     <!-- === Certification 1 === -->
     <div style="background:white; padding:20px; margin:20px 0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1);">
-      <img src="assets/images/cert1.jpg" alt="Certificate 1" style="width:300px; border-radius:8px;">
+      <img src="cer.jpg" alt="Certificate 1" style="width:300px; border-radius:8px;">
       <h3>Full Stack Web Development</h3>
       <p><strong>Issued by:</strong> [Institute / Platform Name]</p>
       <p><strong>Skills Learned:</strong> HTML, CSS, JavaScript, Node.js, React, Database Handling</p>
@@ -30,7 +30,7 @@
 
     <!-- === Certification 2 === -->
     <div style="background:white; padding:20px; margin:20px 0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1);">
-      <img src="assets/images/cert2.jpg" alt="Certificate 2" style="width:300px; border-radius:8px;">
+      <img src="cert.jpeg" alt="Certificate 2" style="width:300px; border-radius:8px;">
       <h3>Java Programming</h3>
       <p><strong>Issued by:</strong> [Institute / Platform Name]</p>
       <p><strong>Skills Learned:</strong> Core Java, OOPs, JDBC, Spring Boot</p>
@@ -39,7 +39,7 @@
 
     <!-- === Certification 3 === -->
     <div style="background:white; padding:20px; margin:20px 0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1);">
-      <img src="assets/images/cert3.jpg" alt="Certificate 3" style="width:300px; border-radius:8px;">
+      <img src="cert2.jpeg" alt="Certificate 3" style="width:300px; border-radius:8px;">
       <h3>Data Structures and Algorithms (DSA)</h3>
       <p><strong>Issued by:</strong> [Institute / Platform Name]</p>
       <p><strong>Skills Learned:</strong> Arrays, Linked Lists, Stacks, Queues, Trees, Sorting & Searching</p>
@@ -48,7 +48,7 @@
   </section>
 
   <footer style="text-align:center; padding:20px; background-color:#0077cc; color:white; margin-top:20px;">
-    <p>© 2025 Dinesh C | All Rights Reserved</p>
+    <p>© 2025 Srujan AB | All Rights Reserved</p>
   </footer>
 
 </body>
